--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -73,11 +73,9 @@
                 </div>
 
                 <a asp-page="Index">
-                    <button>Return To Menu</button>
+                    <button class="btn1">Return To Menu</button>
                 </a>
-                
             </div>
-
         </div>
     </div>
 </div>
