--- a/WCSTrainer/Pages/TrainingOrders/Details.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Details.cshtml
@@ -22,6 +22,10 @@
                 <hr />
                 <div class="field-container">
                     <div class="text-group">
+                        <p class="title">Status</p>
+                        <p class="info">Active</p>
+                    </div>
+                    <div class="text-group">
                         <p class="title">Trainers</p>
                         <p class="info">@Html.DisplayFor(model => model.TrainingOrder.trainers)</p>
                     </div>
@@ -53,7 +57,6 @@
                     <a asp-page="./Edit" asp-route-id="@Model.TrainingOrder.Id">
                         <button class="btn2">Edit Order</button>
                     </a>
-
                     <a asp-page="./Index">
                         <button class="btn1">Return To Menu</button>
                     </a>
