--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -24,46 +24,72 @@
                 <div class="field-container">
                     <form method="post">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        
                         <div class="form-group">
-                            <p class="control-label">Trainers</p>
-                            <span asp-validation-for="TrainingOrder.trainers" class="text-danger"></span>
-                            <input asp-for="TrainingOrder.trainers" class="form-control" />
+                            <div class="labels">
+                                <p class="control-label">Trainers</p>
+                                <span asp-validation-for="TrainingOrder.trainers" class="text-danger"></span>
+                            </div>
                             
+                            <div class="selectors">
+                                <button class="dropdown-btn" id="indiButton">Individual</button>
+                                <button class="dropdown-btn" id="groupButton">Groups</button>
+                            </div>
+                            
+                            <select id="individual" style="display: none" asp-for="TrainingOrder.trainers" class="form-drop2">
+                                @foreach (var individual in Model.Individuals) {
+                                    <option value="@individual.Text">@individual.Text</option>
+                                }
+                            </select>
+                            <select id="groups" style="display: none" asp-for="TrainingOrder.trainers" class="form-drop2">
+                                @foreach (var group in Model.Groups) {
+                                    <option value="@group.Text">@group.Text</option>
+                                }
+                            </select>
                         </div>
                         <div class="form-group">
-                            <p class="control-label">Trainee</p>
-                            <span asp-validation-for="TrainingOrder.trainee" class="text-danger"></span>
+                            <div class="labels">
+                                <p class="control-label">Trainee</p>
+                                <span asp-validation-for="TrainingOrder.trainee" class="text-danger"></span>
+                            </div>
                             <input asp-for="TrainingOrder.trainee" class="form-control" />
-                            
                         </div>
                         <div class="form-group">
-                            <p class="control-label">Begin Date</p>
-                            <span asp-validation-for="TrainingOrder.beginDate" class="text-danger"></span>
+                            <div class="labels">
+                                <p class="control-label">Begin Date</p>
+                                <span asp-validation-for="TrainingOrder.beginDate" class="text-danger"></span>
+                            </div>
                             <input asp-for="TrainingOrder.beginDate" class="form-control" />
-                            
                         </div>
                         <div class="form-group">
-                            <p class="control-label">End Date</p>
-                            <span asp-validation-for="TrainingOrder.endDate" class="text-danger"></span>
+                            <div class="labels">
+                                <p class="control-label">End Date</p>
+                                <span asp-validation-for="TrainingOrder.endDate" class="text-danger"></span>
+                            </div>
                             <input asp-for="TrainingOrder.endDate" class="form-control" />
-                            
                         </div>
                         <div class="form-group">
-                            <p class="control-label">Location</p>
-                            <span asp-validation-for="TrainingOrder.location" class="text-danger"></span>
-                            <input asp-for="TrainingOrder.location" class="form-control" />
-                            
+                            <div class="labels">
+                                <p class="control-label">Location</p>
+                                <span asp-validation-for="TrainingOrder.location" class="text-danger"></span>
+                            </div>
+                            <select asp-for="TrainingOrder.location" class="form-drop">
+                                @foreach (var locations in Model.Locations) {
+                                    <option value="@locations.Text">@locations.Text</option>
+                                }
+                            </select>
                         </div>
                         <div class="form-group">
-                            <p class="control-label">Medium</p>
-                            <span asp-validation-for="TrainingOrder.medium" class="text-danger"></span>
+                            <div class="labels">
+                                <p class="control-label">Medium</p>
+                                <span asp-validation-for="TrainingOrder.medium" class="text-danger"></span>
+                            </div>
                             <input asp-for="TrainingOrder.medium" class="form-control" />
-                            
                         </div>
                         <div class="form-group">
-                            <p class="control-label">Description</p>
-                            <span asp-validation-for="TrainingOrder.description" class="text-danger"></span>
+                            <div class="labels">
+                                <p class="control-label">Description</p>
+                                <span asp-validation-for="TrainingOrder.description" class="text-danger"></span>
+                            </div>
                             <input asp-for="TrainingOrder.description" class="form-control" />
                         </div>
                         <div class="form-group">
@@ -79,6 +105,27 @@
         </div>
     </div>
 </div>
+
+<script>
+    var indiButton = document.getElementById("indiButton");
+    var groupButton = document.getElementById("groupButton");
+
+    var individual = document.getElementById("individual");
+    var groups = document.getElementById("groups");
+
+    indiButton.addEventListener("click", function () {
+        groups.style.display = "none";
+        groups.selectedIndex = -1;
+        individual.style.display = "block";
+    });
+
+    groupButton.addEventListener("click", function () {
+        groups.style.display = "block";
+        individual.style.display = "none";
+        individual.selectedIndex = -1;
+    });
+
+</script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
