--- a/WCSTrainer/Pages/Shared/_Layout.cshtml
+++ b/WCSTrainer/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="Index">WCS Trainer</a></li>
+            <li><a href="Home">WCS Trainer</a></li>
             <li><a href="Index">Home</a></li>
             <li><a href="TrainingOrders">Admin Panel</a></li>
         </ul>
